# tpf-ml-juanpablomercado

./: README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
API/: Dockerfile  configuration.py  dataAccessLayer.py  database.ini  dbManager.py  main.py  pyproject.toml  requirements.txt  start.sh  utils.py
Datasets/: places.csv  ratings.csv
dags/: configuration.py  create_tables.py  dbManager.py  etl_dag.py  etl_places.py  etl_ratings.py  model_training.py  models.py
