[tool.poetry]
name = "tpf-ml-juanpablomercado"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tpf_ml_juanpablomercado"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.44"
psycopg2 = "^2.9.5"
SQLAlchemy-Utils = "^0.38.3"
pandas = "^1.5.2"
sklearn = "^0.0.post1"
fuzzywuzzy = "^0.18.0"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
